--- a/week4/Makefile
+++ b/week4/Makefile
@@ -1,9 +1,12 @@
 all: start
 
 solver.exe:
-	g++ solver.cpp -o solver.exe -I./include
+	g++ main.cpp -o solver.exe -I./include
 
 start: solver.exe
 	./solver.exe
 	python3.10 plotter.py
 	eog plot.svg
+
+clean:
+	rm *.exe *.o *.bin
