--- a/week4/Makefile
+++ b/week4/Makefile
@@ -1,10 +1,10 @@
 all: start
 
-solver.exe:
+solver.exe: main.cpp
 	g++ main.cpp -o solver.exe -I./include
 
 start: solver.exe
-	
+
 	python3.10 plotter.py
 
 clean:
