--- a/week4/configs/physic_config.json
+++ b/week4/configs/physic_config.json
@@ -1,8 +1,12 @@
 {
-	"model" : "Harmonic",
+	"model" : "Physic",
+
 	"w" : 1,
+	"m" : 1,
+
 	"x0" : 0, 
-	"v0" : 1,
+	"v0" : 1.5,
+	
 	"t1" : 0,
 	"t2" : 6.28,
 	"sampleNum" : 100
