--- a/week4/configs/physic_config.json
+++ b/week4/configs/physic_config.json
@@ -1,5 +1,6 @@
 {
 	"model" : "Physic",
+	"solver" : "rk4",
 
 	"w" : 1,
 	"m" : 1,
@@ -8,6 +9,6 @@
 	"v0" : 1.5,
 	
 	"t1" : 0,
-	"t2" : 6.28,
+	"t2" : 40,
 	"sampleNum" : 100
 }
