--- a/week4/configs/harmonic_config.json
+++ b/week4/configs/harmonic_config.json
@@ -1,12 +1,13 @@
 {
-	"model" : "Harmonic",
-	"solver" : "rk4",
+	"model" : "Physic",
+	"solver" : "heun",
+	"output" : "harmonic.bin",
 
 	"m" : 1,
 	"w" : 1,
 	
 	"x0" : 0, 
-	"v0" : 1.5,
+	"v0" : 1.2,
 	
 	"t1" : 0,
 	"t2" : 40,
